--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/butter-brickle-frozen-delight.html">
+      <li class="butter-brickle"><a href="recipes/butter-brickle-frozen-delight.html">
         Butter Brickle Frozen Delight</a></li>
-      <li><a href="recipes/chocolate-chip-skillet-cookie.html">
+      <li class="choc-chip"><a href="recipes/chocolate-chip-skillet-cookie.html">
         Chocolate Chip Skillet Cookie</a></li>
-      <li><a href="recipes/white-chocolate-raspberry-cheesecake.html">
+      <li class="white-choc-raspberry"><a href="recipes/white-chocolate-raspberry-cheesecake.html">
         White Chocolate Raspberry Cheesecake</a></li>
     </ul>
   </body>
